@@ -41,4 +41,5 @@ Lukas De Groen		2:280/1027@fidonet
 Vince Coen		2:257/609@fidonet
 Joachim Kuwan		2:249/591@fidonet
 Greek			greek@voyager.nnov.ru
+Sergey Nechaev		2:5015/53@fidonet
 
