@@ -168,6 +168,7 @@ AC_PATH_PROG(TAR,tar)
 AC_PATH_PROG(ZIP,zip)
 AC_PATH_PROG(UNZIP,unzip)
 AC_PATH_PROG(ZOO,zoo)
+AC_PATH_PROG(HA,ha)
 AC_PATH_PROG(ANTIVIR,antivir)
 AC_PATH_PROG(FPROT,f-prot)
 AC_PATH_PROG(UVSCAN,uvscan)
